external-crates/move/crates/move-compiler/tests/move_2024/typing/neq_invalid.exp
error[E01003]: invalid modifier
  ┌─ tests/move_2024/typing/neq_invalid.move:2:5
  │
2 │     struct S { u: u64 }
  │     ^^^^^^ Invalid struct declaration. Internal struct declarations are not yet supported
  │
  = Visibility annotations are required on struct declarations from the Move 2024 edition onwards.

error[E01003]: invalid modifier
  ┌─ tests/move_2024/typing/neq_invalid.move:3:5
  │
3 │     struct R {
  │     ^^^^^^ Invalid struct declaration. Internal struct declarations are not yet supported
  │
  = Visibility annotations are required on struct declarations from the Move 2024 edition onwards.

error[E01003]: invalid modifier
  ┌─ tests/move_2024/typing/neq_invalid.move:6:5
  │
6 │     struct G0<phantom T> has drop {}
  │     ^^^^^^ Invalid struct declaration. Internal struct declarations are not yet supported
  │
  = Visibility annotations are required on struct declarations from the Move 2024 edition onwards.

error[E01003]: invalid modifier
  ┌─ tests/move_2024/typing/neq_invalid.move:7:5
  │
7 │     struct G1<phantom T: key> {}
  │     ^^^^^^ Invalid struct declaration. Internal struct declarations are not yet supported
  │
  = Visibility annotations are required on struct declarations from the Move 2024 edition onwards.

error[E01003]: invalid modifier
  ┌─ tests/move_2024/typing/neq_invalid.move:8:5
  │
8 │     struct G2<phantom T> {}
  │     ^^^^^^ Invalid struct declaration. Internal struct declarations are not yet supported
  │
  = Visibility annotations are required on struct declarations from the Move 2024 edition onwards.

error[E04007]: incompatible types
   ┌─ tests/move_2024/typing/neq_invalid.move:13:17
   │
13 │         (0: u8) != (1: u128);
   │             --  ^^     ---- Found: 'u128'. It is not compatible with the other type.
   │             │   │       
   │             │   Incompatible arguments to '!='
   │             Found: 'u8'. It is not compatible with the other type.

error[E04007]: incompatible types
   ┌─ tests/move_2024/typing/neq_invalid.move:14:11
   │
14 │         0 != false;
   │         - ^^ ----- Found: 'bool'. It is not compatible with the other type.
   │         │ │   
   │         │ Incompatible arguments to '!='
   │         Found: integer. It is not compatible with the other type.

error[E04024]: invalid usage of immutable variable
   ┌─ tests/move_2024/typing/neq_invalid.move:18:18
   │
12 │     fun t0(s: S, s_ref: &S, s_mut: &mut S) {
   │            - To use the variable mutably, it must be declared 'mut', e.g. 'mut s'
   ·
18 │         s_mut != s;
   │                  ^ Invalid mutable borrow of immutable variable 's'

error[E05001]: ability constraint not satisfied
   ┌─ tests/move_2024/typing/neq_invalid.move:22:9
   │
 3 │     struct R {
   │            - To satisfy the constraint, the 'drop' ability would need to be added here
   ·
21 │     fun t1(r: R) {
   │               - The type '0x8675309::M::R' does not have the ability 'drop'
22 │         r != r;
   │         ^ '!=' requires the 'drop' ability as the value is consumed. Try borrowing the values with '&' first.'

error[E05001]: ability constraint not satisfied
   ┌─ tests/move_2024/typing/neq_invalid.move:22:14
   │
 3 │     struct R {
   │            - To satisfy the constraint, the 'drop' ability would need to be added here
   ·
21 │     fun t1(r: R) {
   │               - The type '0x8675309::M::R' does not have the ability 'drop'
22 │         r != r;
   │              ^ '!=' requires the 'drop' ability as the value is consumed. Try borrowing the values with '&' first.'

error[E04010]: cannot infer type
   ┌─ tests/move_2024/typing/neq_invalid.move:26:9
   │
26 │         G0{} != G0{};
   │         ^^^^ Could not infer this type. Try adding an annotation

error[E04010]: cannot infer type
   ┌─ tests/move_2024/typing/neq_invalid.move:26:17
   │
26 │         G0{} != G0{};
   │                 ^^^^ Could not infer this type. Try adding an annotation

error[E05001]: ability constraint not satisfied
   ┌─ tests/move_2024/typing/neq_invalid.move:27:9
   │
 7 │     struct G1<phantom T: key> {}
   │            -- To satisfy the constraint, the 'drop' ability would need to be added here
   ·
27 │         G1{} != G1{};
   │         ^^^^
   │         │
   │         '!=' requires the 'drop' ability as the value is consumed. Try borrowing the values with '&' first.'
   │         The type '0x8675309::M::G1<_>' does not have the ability 'drop'

error[E04010]: cannot infer type
   ┌─ tests/move_2024/typing/neq_invalid.move:27:9
   │
27 │         G1{} != G1{};
   │         ^^^^ Could not infer this type. Try adding an annotation

error[E05001]: ability constraint not satisfied
   ┌─ tests/move_2024/typing/neq_invalid.move:27:17
   │
 7 │     struct G1<phantom T: key> {}
   │            -- To satisfy the constraint, the 'drop' ability would need to be added here
   ·
27 │         G1{} != G1{};
   │                 ^^^^
   │                 │
   │                 '!=' requires the 'drop' ability as the value is consumed. Try borrowing the values with '&' first.'
   │                 The type '0x8675309::M::G1<_>' does not have the ability 'drop'

error[E04010]: cannot infer type
   ┌─ tests/move_2024/typing/neq_invalid.move:27:17
   │
27 │         G1{} != G1{};
   │                 ^^^^ Could not infer this type. Try adding an annotation

error[E05001]: ability constraint not satisfied
   ┌─ tests/move_2024/typing/neq_invalid.move:28:9
   │
 8 │     struct G2<phantom T> {}
   │            -- To satisfy the constraint, the 'drop' ability would need to be added here
   ·
28 │         G2{} != G2{};
   │         ^^^^
   │         │
   │         '!=' requires the 'drop' ability as the value is consumed. Try borrowing the values with '&' first.'
   │         The type '0x8675309::M::G2<_>' does not have the ability 'drop'

error[E04010]: cannot infer type
   ┌─ tests/move_2024/typing/neq_invalid.move:28:9
   │
28 │         G2{} != G2{};
   │         ^^^^ Could not infer this type. Try adding an annotation

error[E05001]: ability constraint not satisfied
   ┌─ tests/move_2024/typing/neq_invalid.move:28:17
   │
 8 │     struct G2<phantom T> {}
   │            -- To satisfy the constraint, the 'drop' ability would need to be added here
   ·
28 │         G2{} != G2{};
   │                 ^^^^
   │                 │
   │                 '!=' requires the 'drop' ability as the value is consumed. Try borrowing the values with '&' first.'
   │                 The type '0x8675309::M::G2<_>' does not have the ability 'drop'

error[E04010]: cannot infer type
   ┌─ tests/move_2024/typing/neq_invalid.move:28:17
   │
28 │         G2{} != G2{};
   │                 ^^^^ Could not infer this type. Try adding an annotation

error[E04005]: expected a single type
   ┌─ tests/move_2024/typing/neq_invalid.move:32:9
   │
32 │         () != ();
   │         ^^^^^^^^
   │         │     │
   │         │     Expected a single type, but found expression list type: '()'
   │         Incompatible arguments to '!='

error[E04005]: expected a single type
   ┌─ tests/move_2024/typing/neq_invalid.move:33:9
   │
33 │         (0, 1) != (0, 1);
   │         ^^^^^^^^^^^^^^^^
   │         │         │
   │         │         Expected a single type, but found expression list type: '(u64, u64)'
   │         Incompatible arguments to '!='

error[E04007]: incompatible types
   ┌─ tests/move_2024/typing/neq_invalid.move:34:19
   │
34 │         (1, 2, 3) != (0, 1);
   │         --------- ^^ ------ Found expression list of length 2: '({integer}, {integer})'. It is not compatible with the other type of length 3.
   │         │         │   
   │         │         Incompatible arguments to '!='
   │         Found expression list of length 3: '({integer}, {integer}, {integer})'. It is not compatible with the other type of length 2.

error[E04007]: incompatible types
   ┌─ tests/move_2024/typing/neq_invalid.move:35:16
   │
35 │         (0, 1) != (1, 2, 3);
   │         ------ ^^ --------- Found expression list of length 3: '({integer}, {integer}, {integer})'. It is not compatible with the other type of length 2.
   │         │      │   
   │         │      Incompatible arguments to '!='
   │         Found expression list of length 2: '({integer}, {integer})'. It is not compatible with the other type of length 3.

